--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@
 
 
 		<header class="sectiontitle">
-			<h1 class="homelink"><a href="/index.html">{{ site.title }}</a></h1>
+			<h1 class="homelink"><a href="/index.html">VCFH.work</a></h1>
 		  </header>
 
 
@@ -52,7 +52,7 @@
 		<p>I'm a designer, currently making services and products with Farewill. I help people, organisations and things solve problems. I believe in thinking through making.</p>
 		</div>		
 		<div class="bit">
-		<p>I write {% for post in site.categories.weeknotes limit:1 %}<a href="{{ post.url }}">occasional notes</a>{% endfor %} about what I've been up to. </p>
+		<p>I write <a href="http://victorhwang.co/weeknotes">occasional notes</a> on my personal website about what I've been up to. </p>
 		</div>
 		<a href="mailto:{{site.email}}">{{site.email}}</a>
 	</section>
