added websites for friends back in

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -77,13 +77,28 @@
 		<h2 class="sectiontitle">Links</h1>
 
 			<ul>
-				<li><a href="/weeknotes">Personal website</a></li>
+				<li><a href="http://victorhwang.co">Personal website</a></li>
 				<li><a href="/weeknotes">Weeknotes</a></li>
 				<li><a href="https://twitter.com/{{site.twitter.username}}">Twitter</a></li>
 				<li><a href="https://www.linkedin.com/in/vfhwang/">LinkedIn</a></li>
 			</ul>
 	</section>
 
+	<img class="bitmap" src="assets/images/home/handaxe2.png">
+
+	<section>
+		<h2 class="sectiontitle">Websites I've made for friends</h1>
+
+			<ul class="two-column-list">
+				<li><span><a href="https://louiscaseley.com/">louiscaseley.com</a></span>for Louis</li>
+				<li><span><a href="https://bricabrac.netlify.app/">bricabrac.info</a></span>for Alice-Mae and Lauren</li>
+				<li><span><a href="http://isobelirwin.com/">isobelirwin.com</a></span>for Issy</li>
+				<li><span><a href="http://clockface.netlify.app/">clockface.com</a></span>for Matthew</li>
+				<li><span><a href="http://milliethebarber.netlify.app/">milliethebarber.co.uk</a></span>for Millie</li>
+				<li><span><a href="http://hinokicandle.co">hinokicandle.co</a></span>for James</li>
+
+			</ul>
+	</section>
 
 	<img class="bitmap" src="assets/images/home/handaxe4.png">
 
