fix weekntoes links

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -78,7 +78,7 @@
 
 			<ul>
 				<li><a href="http://victorhwang.co">Personal website</a></li>
-				<li><a href="/weeknotes">Weeknotes</a></li>
+				<li><a href="http://victorhwang.co/weeknotes">Weeknotes</a></li>
 				<li><a href="https://twitter.com/{{site.twitter.username}}">Twitter</a></li>
 				<li><a href="https://www.linkedin.com/in/vfhwang/">LinkedIn</a></li>
 			</ul>
