--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,7 +52,7 @@
 		<p>I'm a designer, currently making services and products with Farewill. I help people, organisations and things solve problems. I believe in thinking through making.</p>
 		</div>		
 		<div class="bit">
-		<p>I write <a href="http://victorhwang.co/weeknotes">occasional notes</a> on my personal website about what I've been up to. </p>
+		<p>I write <a href="http://victorhwang.co/weeknotes">occasional notes</a> on my <a href="http://victorhwang.co/">personal website</a> about what I've been up to. </p>
 		</div>
 		<a href="mailto:{{site.email}}">{{site.email}}</a>
 	</section>
