change background back

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -57,8 +57,21 @@
 		<a href="mailto:{{site.email}}">{{site.email}}</a>
 	</section>
 
-
 	<img class="bitmap" src="assets/images/home/handaxe.png">
+
+	<section>
+		<h2 class="sectiontitle">Case Studies</h1>
+
+			<ul class="two-column-list">
+				<li><span>Farewill</span><a href="#">Coming soon</a></li>
+				<li><span>UK Parliament</span><a href="#">Coming soon</a></li>
+				<li><span>BBC iPlayer</span><a href="#">Coming soon</a></li>
+			</ul>
+	</section>
+
+
+	<img class="bitmap" src="assets/images/home/handaxe3.png">
+
 
 	<section>
 		<h2 class="sectiontitle">Work history</h1>
@@ -70,8 +83,8 @@
 			</ul>
 	</section>
 
+	<img class="bitmap" src="assets/images/home/handaxe2.png">
 
-	<img class="bitmap" src="assets/images/home/handaxe3.png">
 
 	<section>
 		<h2 class="sectiontitle">Links</h1>
@@ -84,7 +97,7 @@
 			</ul>
 	</section>
 
-	<img class="bitmap" src="assets/images/home/handaxe2.png">
+	<img class="bitmap" src="assets/images/home/handaxe.png">
 
 	<section>
 		<h2 class="sectiontitle">Websites I've made for friends</h1>
