--- a/assets/main.css
+++ b/assets/main.css
@@ -119,7 +119,7 @@ font-weight: 400;
 line-height:1.3;
 font-size:18px;
 color: #E0E0E0;
-background-color: #31262E;
+background-color: #242832;
 /* max-width: 650px; */
 }
 
