--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@
 
 
 		<header class="sectiontitle">
-			<h1 class="homelink"><a href="/index.html">VCFH.work</a></h1>
+			<h1 class="homelink"><a href="/index.html">vcfh.work</a></h1>
 		  </header>
 
 
