--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@
 
 
 		<header class="sectiontitle">
-			<h1 class="homelink"><a href="/index.html">vcfh.work</a></h1>
+			<h1 class="homelink"><a href="/index.html">vcfh.work</a><span class="opacity60"> — Portfolio of Victor Hwang</span></h1><p></p>
 		  </header>
 
 
@@ -52,7 +52,7 @@
 		<p>I'm a designer, currently making services and products with Farewill. I help people, organisations and things solve problems. I believe in thinking through making.</p>
 		</div>		
 		<div class="bit">
-		<p>I write <a href="http://victorhwang.co/weeknotes">occasional notes</a> on my <a href="http://victorhwang.co/">personal website</a> about what I've been up to. </p>
+		<p>I have a <a href="http://victorhwang.co/">personal website</a> too. </p>
 		</div>
 		<a href="mailto:{{site.email}}">{{site.email}}</a>
 	</section>
