--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,62 +40,29 @@
 
 
 		<header class="sectiontitle">
-			<h1 class="homelink"><a href="/index.html">vcfh.work</a><span class="opacity60"> — Portfolio of Victor Hwang</span></h1><p></p>
+			<h1 class="homelink"><a href="/index.html">vcfh.work</a><span class="opacity60">product design portfolio of <a href="http://victorhwang.co">Victor Hwang</a></span></h1><p></p>
 		  </header>
 
 
 <main data-barba="container" data-barba-namespace="home">
 		
 
-	<section>
-		<div class="bit">
+	<section class="intro">
 		<p>I'm a designer, currently making services and products with Farewill. I help people, organisations and things solve problems. I believe in thinking through making.</p>
-		</div>		
-		<div class="bit">
-		<p>I have a <a href="http://victorhwang.co/">personal website</a> too. </p>
-		</div>
-		<a href="mailto:{{site.email}}">{{site.email}}</a>
 	</section>
-
-	<img class="bitmap" src="assets/images/home/handaxe.png">
-
-	<section>
-		<h2 class="sectiontitle">Case Studies</h1>
-
-			<ul class="two-column-list">
-				<li><span>Farewill</span><a href="#">Coming soon</a></li>
-				<li><span>UK Parliament</span><a href="#">Coming soon</a></li>
-				<li><span>BBC iPlayer</span><a href="#">Coming soon</a></li>
-			</ul>
-	</section>
-
-
-	<img class="bitmap" src="assets/images/home/handaxe3.png">
-
 
 
 	<section>
-		<h2 class="sectiontitle">Links</h1>
+		<div class="farewill"><div class="screen"><img src="assets/images/home/farewill-homepage.png"></div></div>
+		<!-- <h2 class="sectiontitle">Farewill</h2><p>case study coming soon</p> -->
 
-			<ul>
-				<li><a href="http://victorhwang.co">Personal website</a></li>
-				<li><a href="http://victorhwang.co/weeknotes">Weeknotes</a></li>
-				<li><a href="https://twitter.com/{{site.twitter.username}}">Twitter</a></li>
-				<li><a href="https://www.linkedin.com/in/vfhwang/">LinkedIn</a></li>
-			</ul>
 	</section>
 
 
-	<img class="bitmap" src="assets/images/home/handaxe4.png">
 
-	<h2 class="sectiontitle">Team photo</h1>
-	<img class="karaoke" src="/assets/images/about/karaoke-profile-small.png">
-
-
-	<img class="bitmap" src="assets/images/home/handaxe2.png">
 
 	<div class="colophon tinytext">
-		<p>Each divider on this website is a late neolithic flint axe. <a href="https://commons.wikimedia.org/w/index.php?title=Special:Search&limit=250&offset=0&profile=default&search=flint+axe+head&advancedSearch-current=%7B%7D&ns0=1&ns6=1&ns12=1&ns14=1&ns100=1&ns106=1&searchToken=92um7qb8uftwzbvvannjenis8">(Source)</a></p>
+		<p><a href="mailto:vfhwang@gmail.com">vfhwang@gmail.com</a></p>
 	</div>
 
 	</div>
