added parliament and iplayer images

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,12 +52,25 @@
 	</section>
 
 
-	<section>
+	<section class="project">
 		<div class="farewill"><div class="screen"><img src="assets/images/home/farewill-homepage.png"></div></div>
-		<!-- <h2 class="sectiontitle">Farewill</h2><p>case study coming soon</p> -->
+		<h2>Farewill</h2><p>case study coming soon</p>
 
 	</section>
 
+
+	<section class="project">
+		<div class="parliament"><div class="screen"><img src="assets/images/home/parliament-homepage.png"></div></div>
+		<h2>UK Parliament</h2><p>case study coming soon</p>
+
+	</section>
+
+
+	<section class="project">
+		<div class="iplayer"><div class="screen"><img src="assets/images/home/iplayer-homepage.png"></div></div>
+		<h2>iPlayer</h2><p>case study coming soon</p>
+
+	</section>
 
 
 
