--- a/assets/main.css
+++ b/assets/main.css
@@ -247,6 +247,7 @@ max-width:1200px;
   border-radius:4px;
   box-shadow: 0px 4px 20px rgba(0,0,0,0.05);
   background-color: rgba(255,255,255,0.3);
+
 }
 
 
@@ -378,6 +379,13 @@ li, h3{
     
     .screen{
       width:66%;
+    }
+
+    .project > div {
+      width:100%;
+      /* height:50vh; */
+      padding:120px 0;
+      margin:0 0 20px 0;
     }
 }
 
