started to add bbc case study:

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,22 +53,22 @@
 
 
 	<section class="project">
-		<div class="farewill"><div class="screen"><img src="assets/images/home/farewill-homepage.png"></div></div>
-		<h2>Farewill</h2><p>case study coming soon</p>
+		<div class="image-contain farewill"><div class="screen"><img src="assets/images/home/farewill-homepage.png"></div></div>
+		<h2>Farewill</h2><p class="inline-p">case study coming soon</p>
 
 	</section>
 
 
 	<section class="project">
-		<div class="parliament"><div class="screen"><img src="assets/images/home/parliament-homepage.png"></div></div>
-		<h2>UK Parliament</h2><p>case study coming soon</p>
+		<div class="image-contain parliament"><div class="screen"><img src="assets/images/home/parliament-homepage.png"></div></div>
+		<h2>UK Parliament</h2><p class="inline-p">case study coming soon</p>
 
 	</section>
 
 
 	<section class="project">
-		<div class="iplayer"><div class="screen"><img src="assets/images/home/iplayer-homepage.png"></div></div>
-		<h2>iPlayer</h2><p>case study coming soon</p>
+		<div class="image-contain iplayer"><div class="screen"><img src="assets/images/home/iplayer-homepage.png"></div></div>
+		<h2>iPlayer</h2><p class="inline-p"><a href="/case-study/iplayer">case study &rarr;</a></p>
 
 	</section>
 
