--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,16 +39,16 @@
 
 <section class="main">
 
-	<header class="sectiontitle postpage">
-	  <h2 class="homelink"><a href="/index.html">{{ site.title }}</a></h2>
+	<header class="sectiontitle">
+		<h2 class="homelink width200"><a href="/index.html">vcfh.work</a></h2><p class="opacity60 inline-p">product design portfolio of Victor Hwang</p>
 	</header>
 
 	<main data-barba="container" data-barba-namespace="home">
 
+		<!-- <div class="width200"><h1 class="title">{{page.title}}</h1></div><p class="inline-p title">{{page.description}}</p> -->
 
-			<h1 class="title">{{page.title}}</h1><p class="inline-p">{{page.description}}</p>
 
-			<section class="post longform">
+		<section class="post longform">
 	{{ content }}
 
 	<p><a href="/">Back</a></p>
