change home tile design

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,8 +40,8 @@
 
 
 		<header class="sectiontitle">
-			<h1 class="homelink"><a href="/index.html">vcfh.work</a><span class="opacity60">product design portfolio of <a href="http://victorhwang.co">Victor Hwang</a></span></h1><p></p>
-		  </header>
+			<h1 class="homelink width200"><a href="/index.html">vcfh.work</a></h1><p class="opacity60 inline-p">product design portfolio of Victor Hwang</p>
+		</header>
 
 
 <main data-barba="container" data-barba-namespace="home">
@@ -53,25 +53,31 @@
 
 
 	<section class="project">
-		<div class="image-contain farewill"><div class="screen"><img src="assets/images/home/farewill-homepage.png"></div></div>
-		<h2>Farewill</h2><p class="inline-p">case study coming soon</p>
+		<div class="image-contain farewill"><div class="screen"><img src="assets/images/home/farewill-homepage.png"></div>
+		<div class="project-title"><h2>Farewill - coming soon</h2></div>
+	</div>
 
 	</section>
 
 
 	<section class="project">
-		<div class="image-contain parliament"><div class="screen"><img src="assets/images/home/parliament-homepage.png"></div></div>
-		<h2>UK Parliament</h2><p class="inline-p">case study coming soon</p>
+		<div class="image-contain parliament"><div class="screen"><img src="assets/images/home/parliament-homepage.png"></div>
+		<div class="project-title"><h2>UK Parliament - coming soon</h2></div>
+
+	</div>
 
 	</section>
 
-
+	<a href="/case-study/iplayer">
 	<section class="project">
-		<div class="image-contain iplayer"><div class="screen"><img src="assets/images/home/iplayer-homepage.png"></div></div>
-		<h2>iPlayer</h2><p class="inline-p"><a href="/case-study/iplayer">case study &rarr;</a></p>
+		<div class="image-contain iplayer"><div class="screen"><img src="assets/images/home/iplayer-homepage.png"></div>
+	<!-- <p class="caption">Futureproofing the home of British TV</p> -->
+	<div class="project-title"><h2>iPlayer</h2></div>
+
+	</div>
 
 	</section>
-
+</a>
 
 
 	<div class="colophon tinytext">
