--- a/assets/main.css
+++ b/assets/main.css
@@ -135,8 +135,7 @@ background-color: #ffffff;
   font-size: 1.2rem;
 }
 
-.longform .caption{
-  margin:10px;
+.caption, .longform .caption{
   font-size:0.8rem;
   text-align:center;
   max-width:100%;
@@ -196,7 +195,7 @@ max-width:1200px;
 
 h1, h2{
   display:inline;
-  padding: 0 20px 0 0;
+  /* padding: 0 20px 0 0; */
 }
 
 .inline-p{
@@ -221,15 +220,12 @@ h1, h2{
 
 }
 
-.width200{
-  width:20%;
-  display:inline-block;
-}
+
 
 
 .parliament{
   background-color: #373151;
-
+  color:white;  
 }
 
 .iplayer{
@@ -249,7 +245,7 @@ h1, h2{
 
 .screen, .no-screen{
   width:90%;
-  margin:auto;
+  margin:0 auto 10px;
 
 }
 
@@ -362,7 +358,12 @@ li, h3{
 }
 
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 800px) {
+
+  .width200{
+    width:20%;
+    display:inline-block;
+  }
 
   .main{
     margin:48px;
@@ -389,6 +390,8 @@ li, h3{
     
     .screen, .no-screen{
       width:66%;
+        margin:0 auto 20px;
+
     }
 
     .project > div {
@@ -398,14 +401,21 @@ li, h3{
       margin:0 0 20px 0;
     }
 
+    .project-title{
+      margin:40px 0 0 0;
+      border-radius:4px;
+      padding:8px 16px;
+      border:2px solid rgba(255,255,255,0.3);
+      display:inline-block;
+    }
+
     .longform p, .longform li, .longform h3{
       margin-bottom: 1em;
       font-size: 1.8rem;
       max-width: 90%;
     }
 
-    .longform .caption{
-      margin:20px;
+    .caption, .longform .caption{
       font-size:1.1rem;
       text-align:center;
       max-width:100%;
@@ -430,8 +440,7 @@ li, h3{
       max-width: 80%;
     }
 
-    .longform .caption{
-      margin:20px;
+    .caption, .longform .caption{
       font-size:1.3rem;
       text-align:center;
       max-width:100%;
