--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -59,14 +59,15 @@
 
 	</section>
 
-
+	<a href="/case-study/ukparliament">
 	<section class="project">
 		<div class="image-contain parliament"><div class="screen"><img src="assets/images/home/parliament-homepage.png"></div>
-		<div class="project-title"><h2>UK Parliament - coming soon</h2></div>
+		<div class="project-title"><h2>UK Parliament</h2></div>
 
 	</div>
 
 	</section>
+</a>
 
 	<a href="/case-study/iplayer">
 	<section class="project">
