--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@
 
 
 		<header class="sectiontitle">
-			<h1 class="homelink width200"><a href="/index.html">vcfh.work</a></h1><p class="opacity60 inline-p">product design portfolio of Victor Hwang</p>
+			<h1 class="homelink width200"><a href="/index.html">vcfh</a></h1><p class="opacity60 inline-p">product design portfolio of Victor Hwang</p>
 		</header>
 
 
@@ -51,6 +51,7 @@
 		<p>I'm a designer, currently making services and products with Farewill. I help people, organisations and things solve problems. I believe in thinking through making.</p>
 	</section>
 
+	<h2>Work</h2>
 
 	<section class="project">
 		<div class="image-contain farewill"><div class="screen"><img src="assets/images/home/farewill-homepage.png"></div>
@@ -70,19 +71,17 @@
 </a>
 
 	<a href="/case-study/iplayer">
-	<section class="project">
-		<div class="image-contain iplayer"><div class="screen"><img src="assets/images/home/iplayer-homepage.png"></div>
-	<!-- <p class="caption">Futureproofing the home of British TV</p> -->
-	<div class="project-title"><h2>iPlayer</h2></div>
+		<section class="image-contain iplayer">
+			<div class="screen"><img src="assets/images/home/iplayer-homepage.png"></div>			
+			<div class="project-title"><h2>BBC iPlayer</h2></div> 
 
-	</div>
-
+<!-- <p class="caption">A better way to find something to watch</p> -->
 	</section>
 </a>
 
 
 	<div class="colophon tinytext">
-		<p><a href="mailto:vfhwang@gmail.com">vfhwang@gmail.com</a></p>
+		<p>Contact: <a href="mailto:vfhwang@gmail.com">vfhwang@gmail.com</a></p>
 	</div>
 
 	</div>
