add team credits and styled back button

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@
 
 
 		<header class="sectiontitle">
-			<h1 class="homelink width200"><a href="/index.html">vcfh</a></h1><p class="opacity60 inline-p">product design portfolio of Victor Hwang</p>
+			<h1 class="homelink width200"><a href="/index.html">vcfh.</a></h1><p class="opacity60 inline-p">product design portfolio of Victor Hwang</p>
 		</header>
 
 
@@ -51,7 +51,7 @@
 		<p>I'm a designer, currently making services and products with Farewill. I help people, organisations and things solve problems. I believe in thinking through making.</p>
 	</section>
 
-	<h2>Work</h2>
+	<h2>work</h2>
 
 	<section class="project">
 		<div class="image-contain farewill"><div class="screen"><img src="assets/images/home/farewill-homepage.png"></div>
@@ -80,7 +80,7 @@
 </a>
 
 
-	<div class="colophon tinytext">
+	<div class="colophon">
 		<p>Contact: <a href="mailto:vfhwang@gmail.com">vfhwang@gmail.com</a></p>
 	</div>
 
