--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,9 +51,12 @@
 		<section class="post longform">
 	{{ content }}
 
-	<p><a href="/">Back</a></p>
+		</section>
 
-	</section>
+
+	<p class="back-button"><a href="/">Back</a></p>
+
+
 </main>
 </section>
 
