--- a/assets/main.css
+++ b/assets/main.css
@@ -136,9 +136,13 @@ background-color: #ffffff;
 }
 
 .caption, .longform .caption{
-  font-size:0.8rem;
+  font-size:1rem;
   text-align:center;
   max-width:100%;
+}
+
+.longform .colophon{
+  font-size:1rem;
 }
 
 pre{
@@ -212,10 +216,7 @@ h1, h2{
   margin: 40px 0;
 }
 
-.caption{
-  font-size:20px;
 
-}
 
 
 
@@ -232,6 +233,8 @@ h1, h2{
 
 .farewill{
   background-color: #FFDF4E;
+  color:black;  
+
 }
 
 .screen img, .no-screen img, .screen video, .no-screen video{
@@ -322,14 +325,12 @@ margin:24px 0 30px;
   line-height:inherit;
 }
 
-.colophon{
-  font-size:12px;
+/* .longform .colophon{
+  font-size:1.4rem;
   margin:0 0 3em 0;
-}
-
-.tinytext{
   line-height:1.3;
-}
+} */
+
 
 .worknote{
   display:flex;
@@ -346,7 +347,7 @@ li, h3{
   margin:0 0 .5em;
 }
 
-.project-title{
+.project-title, .back-button{
   font-size:1.2rem;
   margin:30px 0 0;
   border-radius:4px;
@@ -406,12 +407,14 @@ li, h3{
       margin:0 0 20px 0;
     }
 
-    .project-title{
+    .project-title, .back-button{
       font-size:1.6rem;
       margin:20px 0 0 0;
       border:3px solid rgba(255,255,255,0.3);
       display:inline-block;
     }
+
+
 
     .longform p, .longform li, .longform h3{
       margin-bottom: 1em;
@@ -420,9 +423,13 @@ li, h3{
     }
 
     .caption, .longform .caption{
-      font-size:1.1rem;
+      font-size:1.2rem;
       text-align:center;
       max-width:100%;
+    }
+
+    .longform .colophon{
+      font-size:1.2rem;
     }
 
     .post > .image-contain{
@@ -450,6 +457,10 @@ li, h3{
       max-width:100%;
     }
 
+    .longform .colophon{
+      font-size:1.3rem;
+    }
+
     .post > .image-contain{
       margin: 80px 0;
     }
@@ -460,3 +471,6 @@ li, h3{
 }
 
 
+.back-button{
+  border:3px solid rgba(0,0,0,0.1);
+}
