complete redesign of homepage to slides

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,54 +39,59 @@
 <section class="main">
 
 
-		<header class="sectiontitle">
-			<h1 class="homelink width200"><a href="/index.html">vcfh.</a></h1><p class="opacity60 inline-p">product design portfolio of Victor Hwang</p>
-		</header>
+
 
 
 <main data-barba="container" data-barba-namespace="home">
 		
 
-	<section class="intro">
-		<p>I'm a designer, currently making services and products with Farewill. I help people, organisations and things solve problems. I believe in thinking through making.</p>
+	<section class="slide intro">
+		<h1>Victor Chieng Fatt Hwang</h1>
+		<p class="max600">I'm a designer, currently making services and products with Farewill. I help people, organisations and things solve problems. I believe in thinking through making.</p>
+		<div class="workdown"><p>Work</p></div>
 	</section>
 
-	<h2>work</h2>
 
-	<section class="project">
-		<div class="image-contain farewill"><div class="screen"><img src="assets/images/home/farewill-homepage.png"></div>
-		<div class="project-title"><h2>Farewill - coming soon</h2></div>
-	</div>
+	<section class="slide project farewill">
+		<h2>Farewill</h2>
+		<div class="screen"><img src="assets/images/home/farewill-homepage.png"></div>
+		<p>The smarter way to make a will </p>
+		<p class="opacity60">( coming soon )</p>
+
+	</section>
+
+	<!-- <a href="/case-study/ukparliament"> -->
+
+	<section class="slide project parliament">
+		<h2>UK Parliament</h2>
+		<div class="screen"><img src="assets/images/home/parliament-homepage.png"></div>
+		<p>Explaining what MPs and Lords do everyday</p>
+		<p class="opacity60">( coming soon )</p>
+	</section>
+
+	<!-- </a> -->
+
+	<!-- <a href="/case-study/iplayer"> -->
+
+	<section class="slide project iplayer">
+		<h2>BBC iPlayer</h2>
+		<div class="screen"><img src="assets/images/home/iplayer-homepage.png"></div>
+		<p>A better way to find something to watch</p>
+		<p class="opacity60">( coming soon )</p>
+	</section>
+
+<!-- </a> -->
+
+	<section class="slide outro">
+		<p>vfhwang@gmail.com</p>
 
 	</section>
 
-	<a href="/case-study/ukparliament">
-	<section class="project">
-		<div class="image-contain parliament"><div class="screen"><img src="assets/images/home/parliament-homepage.png"></div>
-		<div class="project-title"><h2>UK Parliament</h2></div>
-
-	</div>
-
-	</section>
-</a>
-
-	<a href="/case-study/iplayer">
-		<section class="image-contain iplayer">
-			<div class="screen"><img src="assets/images/home/iplayer-homepage.png"></div>			
-			<div class="project-title"><h2>BBC iPlayer</h2></div> 
-
-<!-- <p class="caption">A better way to find something to watch</p> -->
-	</section>
-</a>
 
 
-	<div class="colophon">
-		<p>Contact: <a href="mailto:vfhwang@gmail.com">vfhwang@gmail.com</a></p>
-	</div>
-
-	</div>
 
 </main>
+
 </section>
 
 
