--- a/assets/main.css
+++ b/assets/main.css
@@ -117,17 +117,26 @@ body{
 font-family:'Suisse', serif;
 font-weight: 400;
 line-height:1.3;
-font-size:18px;
+font-size:1.25rem;
 color: #454F4D;
 background-color: #ffffff;
 /* max-width: 650px; */
 }
 
-.two-column-list > li{
-  display:grid;
-  grid-template-columns:1fr 1fr;
+.workdown{
+  position:fixed;
+  bottom:10vh;
+  left: 50%;
+transform: translateX(-50%);
 }
 
+.workdown :after{
+    content: '↓';
+    margin:0px 0px 0px 10px;
+    text-decoration:none;
+ 
+ } 
+}
 
 
 .longform p, .longform li, .longform h3{
@@ -166,12 +175,28 @@ color:#4B3666;
 }
 
 
+.slide{
+  background-color: rgba(255,255,255,1);
+  width:100vw;
+  height:100vh;
+  margin:0;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  position:sticky;
+  top:0;
+  box-shadow: 0px 0px 50px rgba(0,0,0,0.1);
+  padding:10px;
+}
+
+
 
 
 
 .main{
-margin:16px;
-max-width:1200px;
+/* margin:16px;
+max-width:1200px; */
 }
 
 
@@ -244,12 +269,12 @@ h1, h2{
 }
 
 .screen, .no-screen{
-  width:90%;
-  margin:0 auto 10px;
+  margin:15px auto;
 
 }
 
 .screen{
+  max-width: 90vw;
   border-radius:4px;
   box-shadow: 0px 4px 20px rgba(0,0,0,0.05);
   background-color: rgba(255,255,255,0.3);
@@ -288,7 +313,7 @@ margin:0 20px 0 0;
 }
 
 .opacity60{
-color:#6C7994;
+opacity:0.6;
 }
 
 img{
@@ -356,56 +381,43 @@ li, h3{
   display:inline-block;
 }
 
-
-
-.intro{
-  font-size:1.6rem;
-  margin:0 0 30px;
+.max600{
+  max-width:600px;
+  margin:0 auto;
 }
-
 
 @media only screen and (min-width: 800px) {
 
-  .width200{
-    width:20%;
-    display:inline-block;
-  }
+  body{
+    font-size:1.5rem;
+    }
+    
+
 
   .main{
-    margin:48px;
+    /* margin:48px; */
     }
 
     .screen img, .no-screen img, .screen video, .no-screen video{
       padding: 24px 8px 2px;
-    }
-
-    .intro{
-      font-size:2.5rem;
-      max-width:1000px;
-      margin:0 0 60px;
+      max-width:700px;
+      max-height:60vh;
     }
 
     .farewill{
       padding:150px 0;
     }
 
-    .two-column-list > li{
-      display:grid;
-      grid-template-columns:1fr 2fr;
-    }
+
+    
     
     .screen, .no-screen{
-      width:75%;
-        margin:0 auto 20px;
+      /* max-width:100%; */
+      /* max-height:100%; */
+      margin:20px auto;
 
     }
 
-    .project > div {
-      width:100%;
-      /* height:50vh; */
-      padding:120px 0;
-      margin:0 0 20px 0;
-    }
 
     .project-title, .back-button{
       font-size:1.6rem;
@@ -441,9 +453,16 @@ li, h3{
 @media only screen and (min-width: 1284px) {
 
   .main{
-    margin:48px auto;
+    /* margin:48px auto; */
     }
 
+
+
+    .screen img, .no-screen img, .screen video, .no-screen video{
+      max-width:800px;
+      max-height:60vh;
+
+    }
 
     .longform p, .longform li, .longform h3{
       margin-bottom: 1em;
