update homepage with portrait / case study layout nearly there

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,43 +46,48 @@
 		
 
 	<section class="slide intro">
-		<h1>Victor Chieng Fatt Hwang</h1>
-		<p class="max600">I'm a designer, currently making services and products with Farewill. I help people, organisations and things solve problems. I believe in thinking through making.</p>
+		<div class="titles">
+			<h1>vcfh.work</h1>
+			<h2>(Victor Chieng Fatt Hwang)</h2>
+		</div>
+		<p class="max600">I'm a designer, specialised in creating useful products and services. I help people, organisations and things solve problems. I believe in thinking through making.</p>
 		<div class="workdown"><p>Work</p></div>
 	</section>
 
 
-	<section class="slide project farewill">
+	<section class="slide farewill">
 		<h2>Farewill</h2>
 		<div class="screen"><img src="assets/images/home/farewill-homepage.png"></div>
 		<p>The smarter way to make a will </p>
-		<p class="opacity60">( coming soon )</p>
+		<p class="opacity60">( case study coming soon )</p>
 
 	</section>
 
 	<!-- <a href="/case-study/ukparliament"> -->
 
-	<section class="slide project parliament">
+	<section class="slide parliament">
 		<h2>UK Parliament</h2>
 		<div class="screen"><img src="assets/images/home/parliament-homepage.png"></div>
 		<p>Explaining what MPs and Lords do everyday</p>
-		<p class="opacity60">( coming soon )</p>
+		<p class="opacity60">( case study coming soon )</p>
 	</section>
 
-	<!-- </a> -->
+	<!-- </a>
 
-	<!-- <a href="/case-study/iplayer"> -->
+<a href="/case-study/iplayer"> -->
 
-	<section class="slide project iplayer">
+	<section class="slide iplayer">
 		<h2>BBC iPlayer</h2>
 		<div class="screen"><img src="assets/images/home/iplayer-homepage.png"></div>
 		<p>A better way to find something to watch</p>
-		<p class="opacity60">( coming soon )</p>
+		<p class="opacity60">( case study coming soon )</p>
 	</section>
 
 <!-- </a> -->
 
-	<section class="slide outro">
+	<section class="slide final">
+		<!-- <h3>I'd love to chat</h3> -->
+		<img class="smallimg" src="assets/images/home/portrait-victor.jpg">
 		<p>vfhwang@gmail.com</p>
 
 	</section>
