--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,32 +36,70 @@
 </head>
 <body data-barba="wrapper">
 
+	<!-- <div class="backbutton"><p>vcfh.work</p></div> -->
 
 <section class="main">
 
-	<header class="sectiontitle">
-		<h2 class="homelink width200"><a href="/index.html">vcfh.work</a></h2><p class="opacity60 inline-p">product design portfolio of Victor Hwang</p>
-	</header>
+
 
 	<main data-barba="container" data-barba-namespace="home">
 
-		<!-- <div class="width200"><h1 class="title">{{page.title}}</h1></div><p class="inline-p title">{{page.description}}</p> -->
+		
+		<section class="slide short project iplayer">
+			<!-- <h1>{{page.title}}</h1>
+			<p>{{page.description}}</p>
+			<div class="screen"><img src="{{page.imagesurl}}/cover.png"></div> -->
 
+			<p>iPlayer was created in 2007 as a way to catch up on TV you’d missed. Over time it became a place to discover new shows, too. However, in research sessions we saw that it wasn’t as easy to find something new as it should’ve been.</p>
+		</section>
 
-		<section class="post longform">
-	{{ content }}
+		<section class="postbody">
+			<div class="postcontainer">	
+				{{ content }}
+			</div>
 
 		</section>
 
 
-	<p class="back-button"><a href="/">Back</a></p>
 
 
 </main>
 </section>
 
 
+<section class="slide project iplayer">
+	<p>The final homepage</p>
+	<div class="screen"><img src="{{page.imagesurl}}/cover.png"></div>
+</section>
 
+
+<section class="slide final">
+	<p>This work was completed as a Junior UX designer over 3 months, working closely with Filippo Cuttica, Dimple Gohil and Thomas Arnold.</p>
+
+	<!-- <div class="project-sign-off finalitem">
+		<img src="{{page.imagesurl}}/end.png">
+			<p>Me and Billy outside the BBC</p>
+		</div> -->
+</section>
+
+<section class="slide otherprojects">
+
+	<h3>Other projects</h3>
+	<ul class="otherprojectslist">
+	<a href=""><li><p>UK Parliament</p></li></a>
+	<a href=""><li><p>Farewill</p></li></a>
+	<a href=""><li><p>BBC iPlayer</p></li></a>
+	</ul>
+
+	<h3>Contact</h3>
+	<ul class="otherprojectslist">
+	<li><p>vfhwang@gmail.com</p></li>
+	</ul>
+
+	<a href="/"><div class="backbutton"><p>vcfh.work</p></div></a>
+
+
+</section>
 
 </body>
 </html>
