--- a/assets/main.css
+++ b/assets/main.css
@@ -306,6 +306,12 @@ max-width:1200px; */
 
 }
 
+.farewill2{
+  background-color: #162258;
+  color:white;  
+
+}
+
 .final{
   /* flex-basis:0;
   flex-direction: row;
