added alt text for images on homepate

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,6 @@
 
 	{% seo %}
 
-	<script data-ad-client="ca-pub-7484900949797874" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	
 </head>
 <body data-barba="wrapper">
@@ -58,7 +57,7 @@
 	<!-- <a href="{{ post.permalink }}"> -->
 		<section class="slide {{ post.class }}">
 			<h2>{{ post.title }}</h2>
-			<div class="screen"><img src="{{ post.imagesurl }}/cover.png"></div>
+			<div class="screen"><img src="{{ post.imagesurl }}/cover.png" alt="A desktop screenshot of {{ post.title }}"></div>
 			<p>{{ post.description }}</p>
 			<p class="opacity60">( case study coming soon )</p>
 
@@ -76,7 +75,7 @@
 
 	<section class="slide final">
 		<!-- <h3>I'd love to chat</h3> -->
-		<img class="smallimg" src="assets/images/home/portrait-victor.jpg">
+		<img class="smallimg" src="assets/images/home/portrait-victor.jpg"alt="A portrait of Victor Hwang">
 		<p>vfhwang@gmail.com</p>
 
 	</section>
