--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,6 @@
 </head>
 <body data-barba="wrapper">
 
-	<!-- <div class="backbutton"><p>vcfh.work</p></div> -->
 
 <section class="main">
 
@@ -44,12 +43,8 @@
 	<main data-barba="container" data-barba-namespace="home">
 
 		
-		<section class="slide short project iplayer">
-			<!-- <h1>{{page.title}}</h1>
-			<p>{{page.description}}</p>
-			<div class="screen"><img src="{{page.imagesurl}}/cover.png"></div> -->
-
-			<p>iPlayer was created in 2007 as a way to catch up on TV you’d missed. Over time it became a place to discover new shows, too. However, in research sessions we saw that it wasn’t as easy to find something new as it should’ve been.</p>
+		<section class="slide short project {{page.class}}">
+			<p class="max600">{{ page.intro }}</p>
 		</section>
 
 		<section class="postbody">
@@ -66,28 +61,32 @@
 </section>
 
 
-<section class="slide project iplayer">
-	<p>The final homepage</p>
-	<div class="screen"><img src="{{page.imagesurl}}/cover.png"></div>
+<section class="slide project {{page.class}}">
+	<div class="screen"><img class="giant" src="{{page.imagesurl}}/cover.png"></div>
 </section>
 
 
 <section class="slide final">
-	<p>This work was completed as a Junior UX designer over 3 months, working closely with Filippo Cuttica, Dimple Gohil and Thomas Arnold.</p>
+	<p class="max600">{{ page.team }}</p>
 
-	<!-- <div class="project-sign-off finalitem">
-		<img src="{{page.imagesurl}}/end.png">
-			<p>Me and Billy outside the BBC</p>
-		</div> -->
+
 </section>
 
 <section class="slide otherprojects">
 
 	<h3>Other projects</h3>
 	<ul class="otherprojectslist">
-	<a href=""><li><p>UK Parliament</p></li></a>
-	<a href=""><li><p>Farewill</p></li></a>
-	<a href=""><li><p>BBC iPlayer</p></li></a>
+	{%  for post in site.categories.casestudies %}
+  		{% if post.url != page.url %} 
+    		{% if forloop.index < 6 or found %}
+      <li>
+		<a href="{{ post.url }}"><p>{{ post.description }}</p></a>
+      </li>
+    		{% endif %}
+  			{% else %}
+    		{% assign found = true %} 
+  		{% endif %}
+	{% endfor %}
 	</ul>
 
 	<h3>Contact</h3>
