--- a/assets/main.css
+++ b/assets/main.css
@@ -86,6 +86,7 @@ box-sizing: border-box;
 }
 *, *:before, *:after {
 box-sizing: inherit;
+scroll-behavior: smooth;
 }
 
 button {
@@ -134,7 +135,8 @@ transform: translateX(-50%);
   position:fixed;
   top:3vh;
   left: 50%;
-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width:1100%;
 }
 
 .workdown :after{
