updating farewill wills case

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,6 +45,7 @@
 		
 		<section class="slide short project {{page.class}}">
 			<p class="max600">{{ page.intro }}</p>
+			<p class="max600">{{ page.intro2 }}</p>
 		</section>
 
 		<section class="postbody">
