--- a/assets/main.css
+++ b/assets/main.css
@@ -176,11 +176,11 @@ a:active{
 }
 
 a{
-color: #F1D3FF;
+color: #2c2c2c;
 }
 
 a:hover{
-color:#DDA6F7;
+color:#4B3666;
 }
 
 
@@ -261,7 +261,14 @@ max-width:1200px; */
 }
 
 
-
+.otherprojectslist a{
+  color: #bebebe;
+  }
+  
+.otherprojectslist a:hover{
+color:#DDA6F7;
+}
+  
 
 
 
