--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,7 +49,7 @@
 			<h1>vcfh.work</h1>
 			<h2>(Victor Chieng Fatt Hwang)</h2>
 		</div>
-		<p class="max600">I'm a designer, specialised in creating useful products and services. I help people, organisations and things solve problems. I believe in thinking through making.</p>
+		<p class="max600">I'm a designer, currently making services and products with Farewill. I help people, organisations and things solve problems. I believe in thinking through making.</p>
 		<a href="#work"><div class="workdown"><p>Work</p></div></a>
 	</section>
 
